Wed Jul 31 23:19:06 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (power_cache_get_power): Change numdigits_ret to size_t *.
	  (big2str_orig): Change len argument to size_t.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str1): Follow the above changes.

Wed Jul 31 22:59:47 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parse/test_notation_declaration.rb: Change class
	  name to follow file name change.

Wed Jul 31 22:57:50 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Rename to ...
	* test/rexml/parse/test_notation_declaration.rb: ... this.

Wed Jul 31 22:54:39 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_mixin.rb: Remove duplicated tests.

Wed Jul 31 22:52:55 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Fix typos in expected
	  value.
	  pubilc ->
	  public
	     ^^

Wed Jul 31 22:50:51 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Add tests that focus
	  system literal in external ID system notation declaration.

Wed Jul 31 22:36:21 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_cmp): Extracted from rb_big_cmp.
	  (power_cache_get_power): Change n1 argument (number of digits) to
	  power_level which is just passed to power_cache_get_power0.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str1): Calculate the initial power_level.

Wed Jul 31 22:04:36 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Fix a typo.
	  Extern  ID ->
	  ExternalID
	        ^^

Wed Jul 31 22:01:36 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Add tests that focus
	  public ID in external ID notation declaration.

Wed Jul 31 22:01:24 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* parse.y: fix build error with bison-3.0.

Wed Jul 31 21:58:53 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Split test patterns.
